[gd_scene load_steps=5 format=3 uid="uid://bsx1usq366uih"]

[ext_resource type="Script" path="res://src/elements/ui/in_game_ui.gd" id="1_6al0f"]
[ext_resource type="Script" path="res://src/elements/ui/hud/gameplay_hud.gd" id="2_nwc7u"]
[ext_resource type="Script" path="res://src/elements/ui/hud/health_bar.gd" id="3_6opnk"]
[ext_resource type="Script" path="res://src/elements/ui/menus/options_menu.gd" id="4_8cb5d"]

[node name="InGameUI" type="CanvasLayer"]
script = ExtResource("1_6al0f")

[node name="GameplayHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_nwc7u")

[node name="Hitmarker" type="TextureRect" parent="GameplayHUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Health" type="ProgressBar" parent="GameplayHUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = -113.0
offset_right = 764.0
offset_bottom = -50.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
value = 100.0
show_percentage = false
script = ExtResource("3_6opnk")

[node name="Crosshair" type="TextureRect" parent="GameplayHUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_8cb5d")

[node name="BackgroundColor" type="ColorRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="Buttons" type="HFlowContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -33.0
offset_right = 71.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="OptionsMenu/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="MainMenuButton" type="Button" parent="OptionsMenu/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Go to main menu"

[connection signal="menu_closed" from="OptionsMenu" to="." method="_on_options_menu_menu_closed"]
[connection signal="pressed" from="OptionsMenu/Buttons/ResumeButton" to="OptionsMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="OptionsMenu/Buttons/MainMenuButton" to="OptionsMenu" method="_on_main_menu_button_pressed"]
